--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .mango {
     font-family: 'Nunito', verdana, arial, helvetica, sans-serif;
     font-size: 48px;
+    padding: 0px 0px 27px 0px;
 }
