--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,25 @@
     color: #FFFFFF;
     opacity: 0.5;
 }
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    /* margin: 5% auto; */
+    background-color: #FFFFFF;
+    min-height: 60%;
+    min-width: 85%;
+        
+    width: auto;
+    height: auto;
+        
+    position: fixed;
+    top: 25%;
+    left: 4.5%;
+
+    border-radius: 15px;
+    padding: 39px;
+}
